# ergocub-realsense-pose

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/include/: ForwardKinematics.h  ForwardKinematicsiDynTree.h  ergoCubHeadEncoders.h
src/src/: ForwardKinematicsiDynTree.cpp  ergoCubHeadEncoders.cpp  main.cpp
